--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -181,6 +181,7 @@
         <option>relap</option>
         <option>revcontent</option>
         <option>revjet</option>
+        <option>rfp</option>
         <option>rubicon</option>
         <option>sekindo</option>
         <option>sharethrough</option>
@@ -1399,6 +1400,12 @@
       data-tag="tag3777"
       data-key="705"
       data-opts='{"delivery_method": "banner"}'>
+  </amp-ad>
+
+  <h2>RFP</h2>
+  <amp-ad width="320" height="150"
+      type="rfp"
+      data-adspot-id="NDgxOjUx">
   </amp-ad>
 
   <h2>Rubicon Project Smart Tag</h2>
