Change data-adspot-id for example page

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -1405,7 +1405,7 @@
   <h2>RFP</h2>
   <amp-ad width="320" height="150"
       type="rfp"
-      data-adspot-id="NDgxOjUx">
+      data-adspot-id="ODExOjM2NjQ">
   </amp-ad>
 
   <h2>Rubicon Project Smart Tag</h2>
