--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -1402,7 +1402,7 @@
       data-opts='{"delivery_method": "banner"}'>
   </amp-ad>
 
-  <h2>RFP</h2>
+  <h2>Red for Publishers</h2>
   <amp-ad width="320" height="150"
       type="rfp"
       data-adspot-id="ODExOjM2NjQ">
